<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <fragment
            android:id="@+id/map"
            android:layout_width="375sp"
            android:layout_height="200dp"
            android:layout_margin="5dp" />

    <!--
            class="com.google.android.gms.maps.SupportMapFragment"-->

    <Button
        android:id="@+id/locateme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@color/c3"
        android:text="@string/s4"
        android:textAllCaps="false"
        android:textColor="@color/c2" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:hint="@string/s5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/s6"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/c1"
        android:text="@string/s7"
        android:textAllCaps="false"
        android:textColor="@color/c2"
        android:visibility="gone" />
</LinearLayout>

