<LinearLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/l2"
    android:orientation="vertical">
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:id="@+id/showmap"
        android:orientation="vertical"/>-->

    <fragment
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/map"
        android:layout_margin="5dp"
        class="com.google.android.gms.maps.SupportMapFragment"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locateme"
        android:text="@string/s4"
        android:textAllCaps="false"
        android:textColor="@color/c2"
        android:background="@color/c3"
        android:layout_margin="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:textSize="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:hint="@string/s5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv2"
        android:hint="@string/s6"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b5"
        android:text="@string/s7"
        android:textAllCaps="false"
        android:background="@color/c1"
        android:textColor="@color/c2"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"/>
</LinearLayout>