<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/addplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/c1"
        android:text="@string/s1"
        android:textAllCaps="false"
        android:textColor="@color/c2" />

    <Button
        android:id="@+id/contribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/c1"
        android:text="@string/s2"
        android:textAllCaps="false"
        android:textColor="@color/c2" />

    <Button
        android:id="@+id/resolveerror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/c1"
        android:text="@string/s3"
        android:textAllCaps="false"
        android:textColor="@color/c2" />
</LinearLayout>
