<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/l1"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addplace1"
        android:text="@string/s1"
        android:textAllCaps="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/c1"
        android:textColor="@color/c2"/><!--
        android:onClick="addplace"/>-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b2"
        android:text="@string/s2"
        android:background="@color/c1"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textColor="@color/c2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b3"
        android:text="@string/s3"
        android:textAllCaps="false"
        android:background="@color/c1"
        android:textColor="@color/c2"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
</LinearLayout>